internal/xds/translator/testdata/out/xds-ir/dynamicmodule.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/default/policy-for-http-route/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/envoy-gateway/policy-for-gateway/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/envoy-gateway/policy-for-gateway/dynamic-module/1:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /terminal
      name: httproute/default/httproute-3/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/default/policy-terminal/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /path-loaded
      name: httproute/default/httproute-4/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-4/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/default/policy-path/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http-listener-scope
  virtualHosts:
  - domains:
    - listener-scope.example.com
    name: envoy-gateway/gateway-1/http-listener-scope/listener-scope_example_com
    routes:
    - match:
        pathSeparatedPrefix: /inherit
      name: httproute/default/httproute-5/rule/0/match/0/listener_scope_example_com
      route:
        cluster: httproute/default/httproute-5/rule/0
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /override
      name: httproute/default/httproute-6/rule/0/match/0/listener_scope_example_com
      route:
        cluster: httproute/default/httproute-6/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/default/policy-for-route-6/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/envoy-gateway/policy-for-gateway-listener/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          disabled: true
    - match:
        pathSeparatedPrefix: /same-name
      name: httproute/default/httproute-7/rule/0/match/0/listener_scope_example_com
      route:
        cluster: httproute/default/httproute-7/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.dynamic_modules/envoyextensionpolicy/envoy-gateway/policy-for-gateway-listener/dynamic-module/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    typedPerFilterConfig:
      envoy.filters.http.dynamic_modules/envoyextensionpolicy/envoy-gateway/policy-for-gateway-listener/dynamic-module/0:
        '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
        config: {}
